# lee-games

./: Makefile  README.md  engine.py  pyproject.toml
VD_games/: cli.py
VD_games/games/: even.py  init.py  prime.py  progression.py
VD_games/scripts/: VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  brain_calc.py  brain_gcd.py  engine.py
games_project_lee.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
