
[project.scripts]
VD-even = "VD_games.scripts.VD_even:main"[project]
name = "games-project-lee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[project.scripts]
VD-games = "VD_games.scripts.VD_main:main"

