[project]
name = "games-project-lee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

[project.scripts]
brain-calc = "VD_games.scripts.brain_calc:main"
vd-gcd = "VD_games.scripts.VD_gcd:main"
vd-brain = "VD_games.scripts.brain_calc.py:main"
VD-games = "VD_games.scripts.VD_main:main"
VD-even = "VD_games.scripts.VD_even:main"
VD-progression = "VD_games.scripts.VD_progression:main"
VD-prime = "VD_games.scripts.VD_prime:main"
